objects/Case.object
<CustomObject>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>CAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multinational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PWB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW PWB</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RelatedDocuments__c</fullName>
        <description>List of Related Documents selected in Boundary System Request [it can be list of SAP Contracts or SAP Quote Numbers]</description>
        <inlineHelpText>List of Related Documents selected in Boundary System Request [it can be list of SAP Contracts or SAP Quote Numbers]</inlineHelpText>
        <label>Related Documents</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RelatedTo__c</fullName>
        <description>This field is used for categorizing cases related to certain areas of the product or business.</description>
        <label>Related To</label>
        <picklist>
            <picklistValues>
                <fullName>General Question or Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product - Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product - Database Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product - Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product - Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product - Loading Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product - Querying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This Web site</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reply_Status__c</fullName>
        <description>New field for Informatica</description>
        <label>Reply Status</label>
        <picklist>
            <picklistValues>
                <fullName>Company Replied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Replied</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Subtype__c</fullName>
        <description>Shows various case attributes combined in one multi-select picklist for reporting purposes and for showing case owner what teams need to be engaged</description>
        <label>Request Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>Central Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Border Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Critical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multivendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-standard Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Type of Case being submitted</description>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI Consolidated Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Contact Center</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field added for Admin CR process. It will indicate who requested CR.</description>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Folder_Name__c</fullName>
        <inlineHelpText>Enter the requested private folder name - please note the folder name will be submitted and approved, if modifications to name are made you will be notified upon creation.</inlineHelpText>
        <label>Requested Folder Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_TimeZone__c</fullName>
        <formula>TEXT( Requestor_s_TimeZone__c )</formula>
        <label>Requestor TimeZone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <formula>CreatedBy.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_s_TimeZone__c</fullName>
        <inlineHelpText>This time zone needs to match the country selected on this case in order to have the correct due date, considering the business hours and public holidays for that country, calculated.</inlineHelpText>
        <label>Case Country Timezone</label>
        <picklist>
            <picklistValues>
                <fullName>(GMT+00:00) British Standard Time (Europe/London)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+00:00) Greenwich Mean Time (GMT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+00:00) Irish Standard Time (Europe/Dublin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+00:00) Western European Standard Time (Europe/Lisbon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) British Summer Time (Europe/London)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Amsterdam)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Berlin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Brussels)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Paris)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Prague)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Standard Time (Europe/Rome)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Central European Time (Africa/Algiers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Irish Summer Time (Europe/Dublin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+01:00) Western European Summer Time (Europe/Lisbon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Amsterdam)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Berlin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Brussels)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Paris)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Prague)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Central European Summer Time (Europe/Rome)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Eastern European Standard Time (Europe/Athens)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Eastern European Standard Time (Europe/Bucharest)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Eastern European Standard Time (Europe/Helsinki)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Eastern European Standard Time (Europe/Istanbul)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Eastern European Time (Africa/Cairo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) Israel Standard Time (Asia/Jerusalem)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+02:00) South Africa Standard Time (Africa/Johannesburg)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+03:00) Arabian Standard Time (Asia/Baghdad)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+03:00) Arabian Standard Time (Asia/Kuwait)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT+03:00) Arabian Standard Time (Asia/Riyadh)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Category__c</fullName>
        <label>Resolution Category</label>
        <picklist>
            <picklistValues>
                <fullName>ABP Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABP Modified/Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Granted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account address - Change request sent to D&amp;B (Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account address - Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account address - Updated (Non-Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account already exists in SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account AMID - Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Attribute - Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Attribute - Update requested to D&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Creation - Done (multiple records)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Creation - Done (non standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Creation - Done at Domestic Level (Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Creation - Done at Site Level (Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Creation  - Existed in SFDC (Non-standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Creation - Existed in SFDC at Domestic Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Creation -  Existed in SFDC at Site Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Deletion - Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Deletion - Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account exists at Domestic Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Hierarchy - Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Hierarchy - Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Information Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account name changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account name - changed, and sent to D&amp;B (standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account name - changed (Non-Standard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account name - change request rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account name - Existed as Trade style name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account name - update in ECLIPSE rejected</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Details__c</fullName>
        <label>Resolution Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Status__c</fullName>
        <label>Resolution Status</label>
        <picklist>
            <picklistValues>
                <fullName>Case Opened in Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer does not want to pursue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered New Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered New Doc Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered New Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered New Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Doc Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response to Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reproducible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question Answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to CSE, SE, PM, AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same Issue as Existing Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Error</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Impact__c</fullName>
        <label>Revenue Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revised_Due_Date__c</fullName>
        <description>Revised due date - requested from external system and then negotiated</description>
        <label>Revised Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rework_Revision__c</fullName>
        <description>Picklist to determine if case is a rework or revision (sub) case</description>
        <inlineHelpText>Rework indicates a (sub) case was completed in error.  Revision is a change request to a  (sub) case.</inlineHelpText>
        <label>Rework/Revision</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rework_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Associated Cases</relationshipLabel>
        <relationshipName>Rework_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_to_Market__c</fullName>
        <description>Shows if request is for direct or channel customer</description>
        <label>Route to Market</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Coverage_Segment__c</fullName>
        <label>Sales Coverage Segment</label>
        <picklist>
            <controllingField>Business_Area_Group__c</controllingField>
            <picklistValues>
                <fullName>AMS-BOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-MCA/MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-P&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-US-C&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-US-CME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-US-CP&amp;LS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-US-FINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-US-GHHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-US-MIE-AUTO,A&amp;D, HI-TECH, DELPHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-US-MIE-ENERGY, IND, SYMANTEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-AU-C&amp;G/FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-AU-PS/HC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-CBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-CN-CME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-CN-FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-CN-MDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-CN-OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-HONG KONG &amp; TAIWAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-IN-FSI/CME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-IN-MDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-IN-OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-JP-FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-JP-HLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-JP-MDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-JP-OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-JP-TRANSPORTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ-KOREA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please select the related Salesforce opportunity.</description>
        <label>Salesforce Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases (Salesforce Opportunity)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scenario__c</fullName>
        <label>Scenario</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Account address requires update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Attributes need to be updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account does not exist in Eclipse/MDCP databases (Pricing Request)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account does not exist in SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account exists in MDCP but not in SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account exists in PRM but doesn’t exist in MDCP/SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account exists in SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Hierarchy needs to be updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account is out of business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account name is different</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account name is different from what the user expects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account required for CRS renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account required for Smart Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account required in MDCP for Order Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account should be split in various Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Relationship needs to be updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate records merge required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESIT Learning Board Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESIT Other Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESIT Social Learing Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESIT User Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I can&apos;t access Chatter Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I can&apos;t see a report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I can&apos;t see my ABP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I can&apos;t see my accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I can&apos;t see my contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I can&apos;t see my leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I can&apos;t see my opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I can&apos;t see renewal data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I can&apos;t see some campaigns</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SelectedContracts__c</fullName>
        <inlineHelpText>R5.0 To Capture Selected Contract Ids</inlineHelpText>
        <label>SelectedContracts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <description>Please enter the related Siebel pre-sales or PRM ID.</description>
        <inlineHelpText>Please enter the related Siebel pre-sales or PRM ID.</inlineHelpText>
        <label>Siebel ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <formula>IF(OR(ISNULL( $User.Skype_Name__c  ),LEN($User.Skype_Name__c  ) &lt; 1) , &quot;n/a&quot; ,  HYPERLINK(&quot;skype:&quot;&amp; $User.Skype_Name__c  &amp; &quot;?call&quot; ,IMAGE(&quot;http://mystatus.skype.com/smallicon/&quot; &amp; $User.Skype_Name__c , &quot;SkypeCall&quot;,16,16)) &amp; HYPERLINK(&quot;skype:&quot;&amp; $User.Skype_Name__c  &amp; &quot;?chat&quot; ,IMAGE(&quot;http://www.ifrmonitoring.us/images/SkypeChat.png&quot;, &quot;Chat&quot;,16,16)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Party__c</fullName>
        <description>Account name populated by boundary system or manually entered. no lookup.</description>
        <label>Sold to Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Case_ID__c</fullName>
        <description>ID from external system</description>
        <externalId>true</externalId>
        <inlineHelpText>Identifier of the Case Origin if not Salesforce</inlineHelpText>
        <label>Source System Case ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <description>Priority Flag indicator</description>
        <formula>IMAGE(  
CASE( Priority,  
&quot;Low&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Medium&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;High&quot;, &quot;/img/samples/flag_yellow.gif&quot;,  
&quot;Critical&quot;, &quot;/img/samples/flag_red.gif&quot;,  
&quot;/s.gif&quot;),  
&quot;priority flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Priority Flag indicator
Critical = Red
High = Yell</inlineHelpText>
        <label>PF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
</CustomObject>